오전 오류 해결 반영